Fixing vertical alignment of form input labels

--- a/web/app/themes/ivoh/assets/styles/components/_forms.scss
+++ b/web/app/themes/ivoh/assets/styles/components/_forms.scss
@@ -30,7 +30,7 @@ form {
 
   label:not(.radio) {
     @include h5;
-    top: $gutter;
+    top: 22px;
     left: $gutter;
     position: absolute;
     pointer-events: none;
